--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ management.endpoint.shutdown.enabled=true
 server.shutdown=graceful
 
 #Zipkin
-management.tracing.sampling.probablity=1.0
+management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=
