--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 server.shutdown=graceful
 #Zipkin
-management.tracing.sampling.probablity=1.0
+management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=
