--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 
 #Eureka Client
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eueka=true
+eureka.client.register-with-eureka=true
 eureka.client.fetch-registery=true
 
 #Actuator
@@ -20,5 +20,5 @@ management.endpoint.shutdown.enabled=true
 server.shutdown=graceful
 
 #Zipkin
-management.tracing.sampling.probablity=1.0
+management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=
